# zml-resnet-18

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  documentation-pytorch.md  documentation-zml-1.md  documentation-zml-2.md
python/: requirements.in
resnet-18/: main.zig  resnet18.zig
